--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,30 @@
-version: '3.4'
-
 services:
-  db:
-    container_name: sql_server
+  processor_db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     ports:
       - 8002:1433
     environment:
-      - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=${DB_SA_PASSWORD}
-      - MSSQL_PID=Express
-    restart: always
-    networks:
-      - app_network
+      ACCEPT_EULA: Y
+      SA_PASSWORD: ${DB_SA_PASSWORD}
+      # - MSSQL_PID=Express
     volumes:
       - sql_server_data:/var/opt/mssql
+    healthcheck:
+      test: [ "CMD-SHELL","/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${DB_SA_PASSWORD} -Q 'SELECT 1'" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: always
 
   api_service:
-    container_name: my-api-service
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 5000:80
-      - 5001:443
+      - 5050:80
     depends_on:
-      - db
+      processor_db:
+        condition: service_healthy
     environment:
       - DB_HOST=db
       - DB_NAME=${DB_NAME}
@@ -33,14 +32,7 @@ services:
       - RABBITMQ_HOST=${RABBITMQ_HOST}
       - RABBITMQ_USER=${RABBITMQ_USER}
       - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
-    networks:
-      - app_network
-    env_file:
-      - .env
 
 volumes:
   sql_server_data:
-
-networks:
-  app_network:
-    external: true
+    driver: local
