--- a/DataProcessorAPI/DataProcessorAPI.csproj
+++ b/DataProcessorAPI/DataProcessorAPI.csproj
@@ -11,6 +11,10 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="DotNetEnv" Version="3.0.0" />
+    <!-- <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.3.0" />
+    <PackageReference Include="Keycloak.AuthServices.Authorization" Version="2.3.0" />
+    <PackageReference Include="Keycloak.AuthServices.Common" Version="2.3.0" />
+    <PackageReference Include="Keycloak.AuthServices.Sdk" Version="2.3.0" /> -->
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
