--- a/DataProcessorAPI/DataProcessorAPI.csproj
+++ b/DataProcessorAPI/DataProcessorAPI.csproj
@@ -11,11 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="DotNetEnv" Version="3.0.0" />
-    <!-- <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.3.0" />
+    <PackageReference Include="Keycloak.AuthServices.Authentication" Version="2.3.0" />
     <PackageReference Include="Keycloak.AuthServices.Authorization" Version="2.3.0" />
     <PackageReference Include="Keycloak.AuthServices.Common" Version="2.3.0" />
-    <PackageReference Include="Keycloak.AuthServices.Sdk" Version="2.3.0" /> -->
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
+    <PackageReference Include="Keycloak.AuthServices.Sdk" Version="2.3.0" />
+	<PackageReference Include="MassTransit" Version="8.2.2" />
+	<PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
@@ -23,6 +24,14 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="MassTransit" Version="8.2.2" />
+	<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
+	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.7.1" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.7.0-beta.1" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.7.1" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Process" Version="0.5.0-beta.4" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.0.0-rc9.13" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.7.0" />
   </ItemGroup>
 
 </Project>
