--- a/DataProcessorAPI/appsettings.json
+++ b/DataProcessorAPI/appsettings.json
@@ -6,5 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "RequireHttpsMetadata": false
+  "Keycloak": {
+    "ssl-required": "none",
+    "verify-token-audience": true,
+    "policy-enforcer": {
+      "credentials": {}
+    }
+  }
 }
